--- a/style.css
+++ b/style.css
@@ -1,20 +1,74 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+.page {
+    display: flex;
+    flex-direction: row;
+}
+
+.dropdown {
+    width: 450px;
+    background: #555;
+    padding-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dropdown button {
+    background: #fff;
+    color: #333;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 24px;
+    width: 200px;
+    transition: 0.4s;
+}
+
+.dropdown button:hover {
+    background: #222;
+    color: #fff;
+}
+
+.dropdown-menu {
+    max-height: 500px;
+    overflow-y: auto;
+}
+
+.dropdown-menu span {
+    text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
+    color: #333;
+    padding: 5px 20px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.dropdown-menu span:hover {
+    background: #333;
+    color: #fff;
+}
+
 .container {
     height: 100vh;
+    max-width: 100%;
     background: #555;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .box {
-    background: #fff;
+    display: grid;
+    grid-auto-flow: row;
+    justify-content: center;
+    align-items: center;
+    background: rgb(223, 222, 222);
     width: 600px;
     height: 400px;
     border-radius: 15px;
@@ -25,36 +79,81 @@
     display: grid;
     grid-auto-flow: column;
     justify-content: center;
+    font-weight: 800;
+    font-size: 40px;
+    color: #fff;
+    margin-bottom: 40px;
+    text-shadow: 0.1em 0.1em 0.2em #333;
 }
 
 .flags {
     display: grid;
     grid-auto-flow: column;
     justify-content: center;
+    margin: 20px 0px;
 }
 
 .flag1,
 .flag2 {
-    border: 3px solid #555;
-    width: 100px;
+    width: 160px;
     height: 100px;
-    margin: 5px 50px;
+    margin: 0px 50px;
 }
 
-.menu-dropdown {
-    display: grid;
-    grid-auto-flow: column;
-    justify-content: center;
+.flag1Img,
+.flag2Img {
+    width: 155px;
+    height: 95px;
 }
 
 .quant {
     display: grid;
     grid-auto-flow: column;
     justify-content: center;
+    margin: 20px 0px;
 }
 
-.conversor {
+.input-group {
+    width: 180px;
+}
+
+.input-group-text-from,
+.input-group-text-to {
+    background: #555;
+    color: #fff;
     display: grid;
     grid-auto-flow: column;
-    justify-content: center;
+    align-content: center;
+    width: 50px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    padding: 0px 5px;
+}
+
+.form-control-from,
+.form-control-to {
+    text-align: right;
+    width: 120px;
+    height: 40px;
+    font-size: 24px;
+}
+
+.button {
+    width: 100%;
+    height: 70px;
+    font-size: 24px;
+    border-radius: 8px;
+    background: #555;
+    color: #fff;
+    transition: 0.4s;
+}
+
+.button:active,
+.button:focus {
+    outline: none;
+}
+
+.button:hover {
+    background: #222;
+    color: #fff;
 }
